samples/_failures_safe/1761627318_6e4b4f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c992a7d.c: In function ‘main’:
./samples/SAFE/__tmp_9c992a7d.c:135:25: error: expected declaration or statement at end of input
  135 |                         return 1;
      |                         ^~~~~~
./samples/SAFE/__tmp_9c992a7d.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c992a7d.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c992a7d.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c992a7d.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c992a7d.c:135:25: error: expected declaration or statement at end of input
